5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1644_2443.log
== TEST (2019-04-16 14:54:23) 
-- CODE:
r=input("raio:")
h=input("altura")
n=input("opcao desejada:")
print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:54:03) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1")
	print(((pi*h**2)*(3*r-h))/3)
if (n=="2")
	print(((4*((pi)*r**3))/3)-(((pi*h**2)*(3*r-h))/3))
-- ERROR:
File "XXXX", line 6
    if (n=="1")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:54:11) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print(((pi*h**2)*(3*r-h))/3)
if (n=="2"):
	print(((4*((pi)*r**3))/3)-(((pi*h**2)*(3*r-h))/3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(((pi*h**2)*(3*r-h))/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:54:38) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print(((pi*h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(((pi*h**2)*(3*r-h))/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:55:00) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print(((pi)*h**2)*(3*r-h))/3)

-- ERROR:
File "XXXX", line 7
    print(((pi)*h**2)*(3*r-h))/3)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:55:12) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print((((pi)*h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((((pi)*h**2)*(3*r-h))/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:55:52) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print((pi))

-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:55:59) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print((pi))

-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:56:26) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print((pi)*h**2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((pi)*h**2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:57:32) 
-- CODE:
from math import *
r=input("raio:")
h=input("altura:")
n=input("opcao desejada:")

if (n=="1"):
	print(((h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(((h**2)*(3*r-h))/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:58:04) 
-- CODE:
from math import *
r=int(input("raio:"))
h=int(input("altura:"))
n=int(input("opcao desejada:"))

if (n=="1"):
	print(((h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:58:22) 
-- CODE:
from math import *
r=int(input("raio:"))
h=float(input("altura:"))
n=int(input("opcao desejada:"))

if (n=="1"):
	print(((h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:58:55) 
-- CODE:
from math import *
r=int(input("raio:"))
h=input("altura:")
n=int(input("opcao desejada:"))

if (n=="1"):
	print(((h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:59:03) 
-- CODE:
from math import *
r=int(input("raio:"))
h=input("altura:")
n=int(input("opcao desejada:"))

if (n=="1"):
	print(((h**2)*(3*r-h))/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
